// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createContent > from 0 matches 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    / is not found
  </div>
</div>
`;

exports[`createContent > from 1 match with layout elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      Layout
    </div>
  </div>
</div>
`;

exports[`createContent > from 1 match with no elements 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  />
</div>
`;
